rbx-dom/rbx_binary/src/tests/snapshots/rbx_binary__tests__util__three-nested-folders__decoded.snap
---
source: rbx-dom/rbx_binary/src/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: Grandparent
  class: Folder
  properties:
    Attributes:
      Attributes: {}
    Tags:
      Tags: []
  children:
    - referent: referent-1
      name: Parent
      class: Folder
      properties:
        Attributes:
          Attributes: {}
        Tags:
          Tags: []
      children:
        - referent: referent-2
          name: Child
          class: Folder
          properties:
            Attributes:
              Attributes: {}
            Tags:
              Tags: []
          children: []
